Update SecurityConfig to use dynamic CORS origins